강사 메인 조회 시 교육생 수 조회 API 추가

--- a/views/home_ins.ejs
+++ b/views/home_ins.ejs
@@ -38,7 +38,7 @@
             <div id="header_ins_info">
                 <text>투어/교육 <%= tourList.length %>회</text>
                 <text>|</text>
-                <text>교육생 45명</text>
+                <text>교육생 <%= follower_count %>명</text>
             </div>
             <div id="header_ins_btn">
                 <button>강사 소개</button>
